plugins {
    id 'java'
    id 'application'
    id 'org.ajoberstar.grgit' version '5.0.0'
}

allprojects {
    tasks.withType(JavaCompile).configureEach {
        options.fork = true
    }

    group = 'dev.barebones.commander'
    version = '0.1.0-SNAPSHOT'
    ext.release = 'snapshot'
}

task printFullVersionName {
  doLast { println project.version + '-' + project.ext.release }
}

task printVersionName {
  doLast { println project.version }
}

repositories.mavenCentral()

subprojects {
    apply plugin: 'java-library'
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }
    compileJava.options.compilerArgs += ['--release', '25']
    compileJava.options.encoding = 'UTF-8'
    compileTestJava.options.encoding = 'UTF-8'
    dependencies {
        implementation 'org.slf4j:slf4j-api:2.0.17'
        constraints {
            implementation 'com.squareup.okio:okio-jvm:3.11.0'
            implementation 'org.jetbrains.kotlin:kotlin-stdlib:2.1.20'
            implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:2.1.20'
            implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:2.1.20'
            implementation 'org.jetbrains.kotlin:kotlin-stdlib-common:2.1.20'
        }
    }
    tasks.withType(Test).configureEach {
        // Default subproject test framework to TestNG. Modules that use
        // JUnit 5 (e.g. barebones-protocol-nfs) override with
        // useJUnitPlatform() in their own build.gradle.
        useTestNG()
        testLogging {
            events 'failed', 'standardError'
            exceptionFormat 'full'
            showExceptions true
            showStackTraces true
            showCauses true
        }
    }
}

compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'
compileJava.options.compilerArgs += ['--release', '25']

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    mainClass = 'dev.barebones.commander.bootstrap.Main'
}

dependencies {
    implementation 'com.beust:jcommander:1.82'
    implementation 'com.formdev:flatlaf:3.5.4'

    compileOnly 'com.google.code.findbugs:jsr305:1.3.9'

    // Compile-time deps for the new Bootstrap launcher in
    // src/main/java/dev/barebones/commander/bootstrap/. Bootstrap.java
    // imports LocalBundleContext from barebones-commons-file; it discovers
    // every other module's Activator class by FQN at runtime via
    // Class.forName, so non-commons-file subprojects only need to be on
    // the runtime classpath.
    implementation project(':barebones-commons-file')
    runtimeOnly project(':barebones-core')
    runtimeOnly project(':barebones-command')
    runtimeOnly project(':barebones-commons-collections')
    runtimeOnly project(':barebones-commons-conf')
    runtimeOnly project(':barebones-commons-io')
    runtimeOnly project(':barebones-commons-runtime')
    runtimeOnly project(':barebones-core-preload')
    runtimeOnly project(':apache-bzip2')
    runtimeOnly project(':barebones-encoding')
    runtimeOnly project(':barebones-preferences')
    runtimeOnly project(':barebones-process')
    runtimeOnly project(':barebones-translator')
    runtimeOnly project(':barebones-protocol-sftp')
    runtimeOnly project(':barebones-protocol-nfs')
    runtimeOnly project(':barebones-format-zip')
    runtimeOnly project(':barebones-format-tar')
    runtimeOnly project(':barebones-format-bzip2')
    runtimeOnly project(':barebones-format-gzip')
    runtimeOnly project(':barebones-format-xz')
    runtimeOnly project(':barebones-archiver')
    runtimeOnly project(':barebones-viewer-text')
    runtimeOnly project(':barebones-os-api')
    runtimeOnly project(':barebones-os-macos')
    runtimeOnly project(':barebones-os-linux')
}

ext {
    git = grgit.open(dir: project.rootDir)
    revision = project.hasProperty('revision') ? revision : git.head().id.substring(0, 7)
    arch = project.hasProperty('arch') ? arch : System.getProperty('os.arch')
    identity = project.hasProperty('identity') ? identity : ""
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    manifest {
        attributes("Main-Class": "dev.barebones.commander.bootstrap.Main",
                   "Specification-Title": "barebones-commander",
                   "Specification-Vendor": "barebones-commander contributors",
                   "Specification-Version": project.version,
                   "Implementation-Title": "barebones-commander",
                   "Implementation-Vendor": "barebones-commander contributors",
                   "Implementation-Version": revision,
                   "Build-Date": new Date().format('yyyyMMdd'))
    }
}

test.useTestNG()

// Single fat-jar packaging for `java -jar barebones-commander.jar`.
// Bundles everything on the runtime classpath into the root jar.
tasks.register('fatJar', Jar) {
    group = 'build'
    description = 'Builds a single self-contained jar with all runtime deps.'
    archiveClassifier = 'all'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    manifest {
        attributes("Main-Class": "dev.barebones.commander.bootstrap.Main",
                   "Specification-Title": "barebones-commander",
                   "Specification-Vendor": "barebones-commander contributors",
                   "Specification-Version": project.version,
                   "Implementation-Title": "barebones-commander",
                   "Implementation-Vendor": "barebones-commander contributors",
                   "Implementation-Version": revision,
                   "Build-Date": new Date().format('yyyyMMdd'))
    }
    from sourceSets.main.output
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    exclude 'META-INF/*.SF'
    exclude 'META-INF/*.DSA'
    exclude 'META-INF/*.RSA'
}
